# ruut_functions

./: .gitignore  Cargo.toml  README.md  features.txt
benches/: building_bench.rs
src/: README.md  derivation.rs  display.rs  eval.rs  integration.rs  lib.rs  macros.rs  main.rs  param.rs  simp.rs  traits.rs
src/ops/: add.rs  div.rs  mod.rs  mul.rs  pow.rs
src/parser/: builder.rs  mod.rs
src/simp/: mod.rs
