[package]
name = "ruut_functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruut-algebra = "0.1.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.bench]
debug = true

[[bench]]
name = "building_bench"
harness = false
debug = true
# [profile.release]
# debug=true

