[package]
name = "ruut-functions"
version = "0.2.0"
edition = "2021"
description = "A crate to parse math functions from string (1D,2D,3D,ND) and perform symbolic derivation, gradient, hessian"
license = "MIT"

[dev-dependencies]
criterion = "0.5.1"

[profile.bench]
debug = true

[[bench]]
name = "building_bench"
harness = false
debug = true

